# QQVoiceChange

./: README.md
app/: build.gradle
app/src/androidTest/java/cn/onestravel/ndk/qqvoicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.cpp  common.h  common_platform.cpp  common_platform.h  effect.cpp  effect_fix.cpp  org_fmod_core_EffectUtils.h  org_fmod_example_EffectUtils.h  play_sound.cpp
app/src/main/cpp/inc/: fmod_common.h  fmod_dsp_effects.h
app/src/main/java/cn/onestravel/ndk/qqvoicechange/: MainActivity.java
app/src/main/java/cn/onestravel/ndk/qqvoicechange/recordutils/: AudioFileUtils.java  AudioRecordUtils.java  ErrorCode.java
app/src/main/java/org/fmod/core/: EffectUtils.java  FmodUtils.java
app/src/main/java/org/fmod/example/: EffectUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/cn/onestravel/ndk/qqvoicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
